--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -17,6 +17,9 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
+    "allowJs": true,
+    "esModuleInterop": true,
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
